k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campus-ingress
  namespace: default
  annotations:
    # L'annotazione per il Media Service rimane
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx 
  rules:
  # --- REGOLA 1: API GATEWAY ---
  - host: 192.168.72.109.nip.io  
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 5000

  # --- REGOLA 2: RABBITMQ MANAGEMENT UI ---
  - host: rabbitmq.192.168.72.109.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-service
            port:
              number: 15672

    # (Opzionale per il futuro) Regola 2: Il resto va al Frontend
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: frontend-service
      #       port:
      #         number: 80
